@@ -4,6 +4,8 @@
 * Arabic FBReaderJ resources, by Ahmed Saidi (https://github.com/boussouira)
 * Updated German localization (by Matthias Dill)
 * ePub: fixed empty line support in <pre>-formatted text
+* ePub: added support for CSS margin-top/margin-bottom properties
+* New CSS-like style for default style definitions
 
 ===== 1.10.2 (May 25, 2014) =====
 * Fixed local library duplicates issue
